fix feedback on mobile

--- a/src/style/components/_feedback.sass
+++ b/src/style/components/_feedback.sass
@@ -3,9 +3,9 @@
 #feedback
     position: absolute
     top: variables.$nav-bar-height
-    margin-top: 1rem
+    margin-top: 0.8rem
     right: 0.5rem
-    z-index: 2
+    z-index: 12
     &.open-feedback-block
         border: 1px solid #000
         border-radius: 0 variables.$border-radius-lg
