--- a/src/style/components/_modal.sass
+++ b/src/style/components/_modal.sass
@@ -6,7 +6,7 @@
     left: 0
     width: 100%
     height: 100%
-    z-index: 10
+    z-index: 14
     background-color: #fff
     padding-top: 1rem
     @media (max-width: 1024px)
