--- a/src/style/pages/_about.sass
+++ b/src/style/pages/_about.sass
@@ -1,7 +1,7 @@
 @use '../base/variables'
 
 section#about
-    margin-top: #{variables.$nav-bar-height}
+    margin-top: variables.$nav-bar-height
     overflow-y: auto
     height: calc(100vh - #{variables.$nav-bar-height})
     .me
